--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html, body {
     background-image: url("https://viajem.herokuapp.com/img/bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 .box{
     display: flex;
