--- a/css/style.css
+++ b/css/style.css
@@ -17,10 +17,12 @@ html, body {
     background-size: cover;
 }
 .box{
+    position: absoluta;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
     height: 100%;
     background-color: #fff;
     opacity: 0.6;
