--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,17 @@ html, body {
     background-color: #fff;
     opacity: 0.6;
 }
+.box2{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    opacity: 0.6;
+}
 .contador {
    font-size: 20px;
 }
