--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,10 @@ html, body {
 .contador {
    font-size: 20px;
 }
-p {
+.box2 p {
     margin-top: 10px;
     margin-bottom: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin: 0px;
 }
