--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@ html, body {
     background-color: #fff;
     opacity: 0.6;
 }
+.local {
+   font-size: 20px;
+   margin: 0px;
+   padding: 0px;
+}
 .contador {
    font-size: 20px;
 }
@@ -46,5 +51,5 @@ html, body {
     margin-bottom: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin: 0px;
+    -margin: 0px;
 }
