--- a/css/style.css
+++ b/css/style.css
@@ -73,13 +73,15 @@ p.contador {
 }
 
 .icone {
-    width: 10vw;
-    height: 10vw;
+    width: 15vw;
+    height: 15vw;
 }
 
 label.btn {
     padding: 0px;
     border-radius: 0px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 label.btn.active{
