--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,12 @@ p.contador {
 }
 
 label.btn {
-    padding: 0px;
+    padding: 5px;
     border-radius: 0px;
     margin: 5px;
 }
 
 label.btn.active{
     border-color: #f00;
-    padding: 5px;
+    background-color: #f00;
 }
