--- a/css/style.css
+++ b/css/style.css
@@ -102,17 +102,20 @@ label.btn.active{
 
 .coin {
     position:fixed;
-    bottom: 0vh;
+    bottom: -7.5vw;
     right:  42.5vw;
     width: 15vw;
     height: 15vw;
-    animation: myanim 3s infinite;
+}
+
+.animate {
+    animation: myanim 1s infinite;
 }
 
 @keyframes myanim {
     20% { bottom: 10vh ; }
-    50% { bottom: 20vh; }
+    40% { bottom: 20vh; }
     60% { bottom: 25vh; }
-    70% { bottom: 20vh; }
-    100% { bottom: 0vh; }
+    80% { bottom: 20vh; }
+    100% { bottom: -7.5vw; }
 }
