--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ label.btn.active{
     right:  42.5vw;
     width: 15vw;
     height: 15vw;
+    z-index: 999999;
 }
 
 .animate {
@@ -113,7 +114,7 @@ label.btn.active{
 }
 
 @keyframes myanim {
-    20% { bottom: 15vw ; }
+    20% { bottom: 48vw ; }
     40% { bottom: 48vw; }
     60% { bottom: 50vw; }
     80% { bottom: 50vw; }
