--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ p.contador {
     display: flex;
     justify-content: center;
     align-items: center;
-    cor: #fff;
+    color: #fff;
     font-weight: 900;
 }
 
