--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ label.btn.active{
   width: 100%;
   height: 100%;
   border-radius: 100%;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
+  --box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 .inner-shadow {
   top: 50%;
@@ -138,7 +138,7 @@ label.btn.active{
   margin-top: -20px;
   border-radius: 100%;
   background-color: #ffffff;
-  box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
+  --box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.5);
 }
 .hold {
   position: absolute;
