--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,18 @@ html, body {
     opacity: 0.8;
 }
 
+.box3{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: #2f2e40;
+    opacity: 0.8;
+}
+
 .box2 p {
     margin-top: 10px;
     margin-bottom: 10px;
