--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ html, body {
     width: 100%;
     height: 100%;
     background-color: #2f2e40;
-    opacity: 0.8;
+    opacity: 1;
 }
 
 .box2 p {
@@ -59,6 +59,15 @@ html, body {
     padding-top: 10px;
     padding-bottom: 10px;
     -margin: 0px;
+}
+
+.box3 p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    -margin: 0px;
+    color: #ff;
 }
 
 p.local {
