--- a/css/style.css
+++ b/css/style.css
@@ -70,23 +70,22 @@ html, body {
     color: #fff;
 }
 
-p.local {
-   font-size: 20px;
-   margin: 0px;
-   padding: 0px;
-}
-
 p.contador {
    font-size: 20px;
 }
 
-p info {
+p.info {
     margin: 0px ;
     font-size: 15px !important;
     margin-top: 0px;
     margin-bottom: 0px;
     padding-top: 0px;
     padding-bottom: 0px
+}
+
+.info-box {
+    border-color: #fff;
+    border-width: 1px;
 }
 
 .my-float{
