--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ html, body {
     padding-top: 10px;
     padding-bottom: 10px
     -margin: 0px;
-    color: #fff;
+    color: #c0c8cf;
 }
 
 p.local {
@@ -90,7 +90,7 @@ p.info {
 }
 
 .info-box {
-    border: #fff 1px solid;
+    border: #c0c8cf 1px solid;
     padding: 20px;
 }
 
