--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 8-bit;
+    src: url(/font/8-bit.ttf);
+}
+
 /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
 #map {
@@ -6,6 +11,7 @@
 
 /* Optional: Makes the sample page fill the window. */
 html, body {
+    font-family: 8-bit !important;
     margin: 0;
     padding: 0;
     height: 100%;
