--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-@font-face {
-    font-family: 8bit;
-    src: url(/font/8bit.ttf);
-}
-
 /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
 #map {
@@ -11,7 +6,7 @@
 
 /* Optional: Makes the sample page fill the window. */
 html, body {
-    font-family: 8bit !important;
+    font-family: 'Press Start 2P', cursive;
     margin: 0;
     padding: 0;
     height: 100%;
