--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 /* Optional: Makes the sample page fill the window. */
 html, body {
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', cursive !important;
     margin: 0;
     padding: 0;
     height: 100%;
