--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
 
 /* Optional: Makes the sample page fill the window. */
 html, body {
-    font-family: 'Press Start 2P', cursive !important;
+    font-family: 'VT323', monospace !important;
     margin: 0;
     padding: 0;
     height: 100%;
     font-size: 30px;
-    font-weight: 900;
+    font-weight: 400 !important;
     background-position: center;
     background-image: url("https://viajem.herokuapp.com/img/bg.jpg");
     background-repeat: no-repeat;
