--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,22 @@
-/* Always set the map height explicitly to define the size of the div
+.wrapper {
+  height: 100vh;
+  /*This part is important for centering*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.typing-demo {
+  width: 22ch;
+  animation: typing 2s steps(22), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 2em;
+}
+
+@keyframes typing {/* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
 #map {
   height: 100%;
