--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,19 @@
   font-size: 2em;
 }
 
-@keyframes typing {/* Always set the map height explicitly to define the size of the div
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
+
+/* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
 #map {
   height: 100%;
