--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,10 @@
 }
 
 .typing-demo {
-  width: 22ch;
+  width: 100vw;
   animation: typing 2s steps(22), blink .5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 3px solid;
-  font-family: monospace;
-  font-size: 2em;
 }
 
 @keyframes typing {
