--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 .typing-wrapper {
-  height: 100vh;
   /*This part is important for centering*/
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: center;
 }
 
