--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   animation: typing 2s steps(22), blink .5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
+  color: #c0c8cf;
 }
 
 @keyframes typing {
