--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,3 @@
-.typing-wrapper {
-  /*This part is important for centering*/
-  width: 90vw;
-  display: flex;
-  align-items: left;
-  justify-content: center;
-}
-
-.typing-demo {
-  width: 24ch;
-  animation: typing 2s steps(24), blink .5s step-end infinite alternate;
-  white-space: nowrap;
-  overflow: hidden;
-  color: #c0c8cf;
-}
-
-@keyframes typing {
-  from {
-    width: 0
-  }
-}
-    
-@keyframes blink {
-  50% {
-    border-color: transparent
-  }
-}
-
 /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
 #map {
@@ -185,4 +157,33 @@ label.btn.active{
 .front {
     width: 50vw;
     height: 50vw;
+}
+
+ /*This part is important for centering*/
+
+.typing-wrapper {
+  width: 90vw;
+  display: flex;
+  align-items: left;
+  justify-content: center;
+}
+
+.typing-demo {
+  width: 24ch;
+  animation: typing 2s steps(24), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  font-size: 20px;
+  overflow: hidden;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+    
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
 }
