--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,12 @@ p.info {
    height: 60px;
 }
 
+.my-float spin {
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
+
 #add{
    position:fixed;
    top:20px;
@@ -190,4 +196,11 @@ label.btn.active{
   50% {
     border-color: transparent
   }
+}
+
+@keyframes spin { 
+    100% { 
+        -webkit-transform: rotate(360deg); 
+        transform:rotate(360deg); 
+    } 
 }
