--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ p.info {
    height: 60px;
 }
 
-.my-float spin {
+.my-float .spin {
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
