--- a/css/style.css
+++ b/css/style.css
@@ -199,8 +199,12 @@ label.btn.active{
 }
 
 @keyframes spin { 
-    100% { 
+     from {
+        -webkit-transform: rotate(0deg);
+        transform:rotate(0deg); 
+     }
+     100% { 
         -webkit-transform: rotate(360deg); 
-        transform:rotate(360deg); 
+        transform:rotate(359deg); 
     } 
 }
