--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ p.info {
 }
 
 .my-float.rotating-out {
+    transform-origin: 45% 50%;
     -webkit-animation:rotating-out 1s infinite;
     -moz-animation:rotating-out 1s infinite;
     animation: rotating-out 1s infinite;
@@ -211,6 +212,6 @@ label.btn.active{
         right:-20px;
         width: 100px;
         height: 100px;
-        opacity: 0.5;
+        opacity: 0.2;
     } 
 }
