--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@ p.info {
     -webkit-animation:rotating-out 1s infinite;
     -moz-animation:rotating-out 1s infinite;
     animation: rotating-out 1s infinite;
+    animation-iteration-count: 1
 }
 
 #add{
