--- a/css/style.css
+++ b/css/style.css
@@ -218,3 +218,27 @@ label.btn.active{
         opacity: 0.1;
     } 
 }
+
+.turret {
+    background-color:  #f00;
+    width: 10vw;
+    height: 10vw;
+}
+
+.laser {
+    background-color: #f00;
+    width: 10vw;
+    height: 10vw;
+}
+
+.box1{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0);
+    opacity: 1;
+}
