--- a/css/style.css
+++ b/css/style.css
@@ -223,6 +223,9 @@ label.btn.active{
      color:  #B8860B;
      font-size: 30px;
      background-image: url("/img/balao.png");
+     background-repeat: no-repeat;
+     background-attachment: fixed;
+     background-position: center;
 }
 
 .turret {
