--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,7 @@ label.btn.active{
      background-repeat: no-repeat;
      background-attachment: fixed;
      background-position: center;
+     background-size: auto;
 }
 
 .turret {
