--- a/css/style.css
+++ b/css/style.css
@@ -221,12 +221,11 @@ label.btn.active{
 
 .balao {
      color:  #B8860B;
-     font-size: 30px;
+     font-size: 20px;
      background-image: url("/img/balao.png");
-     background-repeat: no-repeat;
-     background-attachment: fixed;
-     background-position: center;
-     background-size: auto;
+     background-size:     cover; 
+     background-repeat:   no-repeat;
+     background-position: center center;
 }
 
 .turret {
