--- a/css/style.css
+++ b/css/style.css
@@ -223,9 +223,9 @@ label.btn.active{
      color:  #B8860B;
      font-size: 20px;
      background-image: url("/img/balao.png");
-     background-size:  contain; 
+     background-size:  cover; 
      background-repeat:   no-repeat;
-     background-position: center center;
+     --background-position: center center;
      width: 20vw;
      height: 20vw;
 }
