--- a/css/style.css
+++ b/css/style.css
@@ -232,13 +232,13 @@ label.btn.active{
 }
 
 .turret {
-    background-color:  #B8860B;
+    background-color:  #2f2e40;
     width: 10vw;
     height: 10vw;
 }
 
 .laser {
-    background-color:  #B8860B;
+    background-color:  #2f2e40;
     width: 10vw;
     height: 10vw;
 }
