--- a/css/style.css
+++ b/css/style.css
@@ -220,10 +220,11 @@ label.btn.active{
 }
 
 .box1{
+    padding: 20px;
     position: absolute;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: bottom;
     flex-direction: column;
     width: 100%;
     height: 100%;
