--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ label.btn.active{
     position: absolute;
     display: flex;
     justify-content: bottom;
-    align-items: bottom;
+    align-items: center;
     flex-direction: column;
     width: 100%;
     height: 100%;
