--- a/css/style.css
+++ b/css/style.css
@@ -224,11 +224,15 @@ label.btn.active{
     padding: 20px;
     position: absolute;
     display: flex;
-    justify-content: space-between;
+    justify-content: stretch;
     align-items: center;
     flex-direction: column;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0);
     opacity: 1;
+}
+
+.inventario {
+    overflow-y: scroll;
 }
