--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ label.btn.active{
     padding: 20px;
     position: absolute;
     display: flex;
-    justify-content: stretch;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     width: 100%;
@@ -235,4 +235,9 @@ label.btn.active{
 
 .inventario {
     overflow-y: scroll;
+    position: absolute;
+    display: flex;
+    j--ustify-content: space-between;
+    align-items: center;
+    flex-direction: column;
 }
