--- a/css/style.css
+++ b/css/style.css
@@ -132,6 +132,7 @@ label.btn {
     padding: 5px;
     border-radius: 0px;
     margin: 5px;
+    border-width: 2px;
 }
 
 label.btn.active{
@@ -235,7 +236,6 @@ label.btn.active{
 
 .inventario {
     overflow-y: scroll;
-    position: absolute;
     display: flex;
     j--ustify-content: space-between;
     align-items: center;
