--- a/css/style.css
+++ b/css/style.css
@@ -239,5 +239,5 @@ label.btn.active{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: column;
+    flex-direction: wrap;
 }
