--- a/css/style.css
+++ b/css/style.css
@@ -242,3 +242,17 @@ label.btn.active{
     flex-flow: row wrap;
     max-width: 90vw;
 }
+
+
+.bullet_hole {
+    padding: 20px;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0);
+    opacity: 1;
+}
