--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ html, body {
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: #2f2e40;
+    background-color: #fff;
     opacity: 1;
 }
 
@@ -68,7 +68,7 @@ html, body {
     padding-top: 10px;
     padding-bottom: 10px
     -margin: 0px;
-    color: #c0c8cf;
+    color: #2f2e40;
 }
 
 p.local {
