--- a/cars/css/style.css
+++ b/cars/css/style.css
@@ -25,3 +25,12 @@ html, body {
     background-color: #fff;
     opacity: 1;
 }
+
+.float-right{
+   position: fixed;
+   bottom: 10px;
+   right: 10px;
+   width: 60px;
+   height: 60px;
+   border-radius: 50%;
+}
