--- a/cars/css/style.css
+++ b/cars/css/style.css
@@ -28,9 +28,9 @@ html, body {
 
 .float-right{
    position: fixed;
-   bottom: 10px;
-   right: 10px;
-   width: 60px;
-   height: 60px;
-   border-radius: 50%;
+   bottom: 10px !important;
+   right: 10px !important;
+   width: 60px !important;
+   height: 60px !important;
+   border-radius: 50% !important;
 }
