--- a/cars/css/style.css
+++ b/cars/css/style.css
@@ -26,15 +26,16 @@ html, body {
     opacity: 1;
 }
 
-.float-right{
+.float-center{
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 10px !important;
+   bottom: 10vw !important;
    right: 40vw !important;
    width: 20vw !important;
    height: 20vw !important;
    border-radius: 50% !important;
    z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
