--- a/cars/css/style.css
+++ b/cars/css/style.css
@@ -32,7 +32,7 @@ html, body {
    color: black;
 }
 
-.btn-mic:hover {
+.btn-mic .active {
    border: 1px solid black;
    background-color: black;
    color: white;
