--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -14,7 +14,7 @@ html, body {
     font-weight: 400 !important;
 }
 
-.box{
+.map-box{
     position: absolute;
     display: flex;
     justify-content: center;
@@ -37,7 +37,6 @@ html, body {
    background-color: black;
    color: white;
 }
-
 
 .float-center{
    position: fixed;
