--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -43,11 +43,30 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 10vw !important;
-   right: 40vw !important;
-   width: 20vw !important;
-   height: 20vw !important;
-   border-radius: 50% !important;
+   bottom: 10vw;
+   right: 40vw;
+   width: 20vw;
+   height: 20vw;
+   border-radius: 50%;
    z-index: 9999;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.audio-wave-box {
+   position: fixed;
+   background-color: black;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 40vw;
+   right: 40vw;
+   width: 80vw;
+   height: 20vw;
+   border-radius: 10px;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.audio-wave-canvas {
+     
 }
