--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -59,7 +59,7 @@ html, body {
    justify-content: center;
    align-items: center;
    bottom: 40vw;
-   left: 20vw;
+   left: 10vw;
    width: 80vw;
    height: 20vw;
    border-radius: 10px;
@@ -68,5 +68,6 @@ html, body {
 }
 
 .audio-wave-canvas {
-     
+     width: 100%;
+     height: 100%;
 }
