--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -56,6 +56,10 @@ html, body {
    position: fixed;
    bottom: 60vw;
    font-size: 20px;
+   left: 10vw;
+   width: 80vw;
+   text-align: center;
+   z-index: 9999;
 }
 
 .audio-wave-box {
