--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -32,6 +32,12 @@ html, body {
    color: black;
 }
 
+.btn-reload {
+   border: 1px solid black;
+   background-color: white;
+   color: black;
+}
+
 .btn-mic.active {
    border: 1px solid black;
    background-color: black;
@@ -47,6 +53,20 @@ html, body {
    left: 40vw;
    width: 20vw;
    height: 20vw;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.float-right{
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 14vw;
+   right: 10vw;
+   width: 18vw;
+   height: 18vw;
    border-radius: 50%;
    z-index: 9999;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
