--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -108,6 +108,10 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
+.audio-wave-box.playing {
+   background-color: gray;
+}
+
 .audio-wave-canvas {
      width: 90%;
      height: 90%;
