--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -38,6 +38,12 @@ html, body {
    color: black;
 }
 
+.btn-reload:hover {
+   border: 1px solid black;
+   background-color: black;
+   color: white;
+}
+
 .btn-mic.active {
    border: 1px solid black;
    background-color: black;
