--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -78,6 +78,16 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
+.owner-info {
+   position: fixed;
+   top: 10vw;
+   font-size: 20px;
+   right: 10vw;
+   width: 90vw;
+   text-align: center;
+   z-index: 9999;
+}
+
 .version-info {
    position: fixed;
    bottom: 5vw;
