--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -88,9 +88,20 @@ html, body {
    z-index: 9999;
 }
 
+.icone-v2{
+   position: fixed;
+   bottom: 30vw;
+   font-size: 20px;
+   left: 10vw;
+   width: 10vw;
+   height: 10vw;
+   text-align: center;
+   z-index: 9999;
+}
+
 .version-info {
    position: fixed;
-   bottom: 5vw;
+   bottom: 0vw;
    font-size: 15px;
    left: 10vw;
    width: 30vw;
