--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -143,3 +143,15 @@ html, body {
      width: 90%;
      height: 90%;
 }
+
+/* Only the necessary CSS shown */
+
+:root {
+    --map-tiles-filter: brightness(0.6) invert(1) contrast(3) hue-rotate(200deg) saturate(0.3) brightness(0.7);
+}
+
+@media (prefers-color-scheme: dark) {
+    .map-tiles {
+        filter:var(--map-tiles-filter, none);
+	}
+}
