--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -73,6 +73,8 @@ html, body {
    right: 5vw;
    width: 15vw;
    height: 15vw;
+   max-width: 15vh;
+   max-height: 15vh;
    border-radius: 50%;
    z-index: 9999;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
