--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -150,6 +150,7 @@ html, body {
 
 @media only screen and (min-width: 800px) {
   .float-center {
+      left: 70vw;
       bottom: 10vh;
   }
   .float-right {
