--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -121,12 +121,15 @@ html, body {
    width: 80vw;
    text-align: center;
    z-index: 9999;
+   border-radius: 10px;
+   background-color: black;
+   color: "#fff";
 }
 
 .audio-wave-box {
    position: fixed;
    color: "#fff";
-   background-color: black;
+   background-color: rgba(0,0,0,0.5);
    display: flex;
    justify-content: center;
    align-items: center;
