--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -122,7 +122,7 @@ html, body {
    text-align: center;
    z-index: 9999;
    border-radius: 10px;
-   background-color: black;
+   background-color: rgba(0,0,0,0.5);
    color: "#fff";
 }
 
@@ -143,7 +143,7 @@ html, body {
 }
 
 .audio-wave-box.playing {
-   background-color: gray;
+   background-color: dark-green;
 }
 
 .audio-wave-canvas {
