--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -115,7 +115,7 @@ html, body {
 
 .audio-info {
    position: fixed;
-   bottom: 50vw;
+   bottom: 55vw;
    font-size: 20px;
    left: 10vw;
    width: 80vw;
@@ -143,7 +143,7 @@ html, body {
 }
 
 .audio-wave-box.playing {
-   background-color: dark-green;
+   background-color: rgba(0,0,0,0);
 }
 
 .audio-wave-canvas {
