--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -44,6 +44,18 @@ html, body {
    color: white;
 }
 
+.btn-player {
+   border: 1px solid black;
+   background-color: white;
+   color: black;
+}
+
+.btn-player:hover {
+   border: 1px solid black;
+   background-color: black;
+   color: white;
+}
+
 .btn-mic.active {
    border: 1px solid black;
    background-color: black;
