--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -94,7 +94,7 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.float-right-top{
+.float-top-right {
    position: fixed;
    display: flex;
    justify-content: center;
