--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -38,7 +38,7 @@ html, body {
    color: black;
 }
 
-.btn-reload:hover {
+.btn-reload .active {
    border: 1px solid black;
    background-color: black;
    color: white;
