--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -32,6 +32,12 @@ html, body {
    color: black;
 }
 
+.btn-mic.active {
+   border: 1px solid black;
+   background-color: black;
+   color: white;
+}
+
 .btn-reload {
    border: 1px solid black;
    background-color: white;
@@ -56,7 +62,13 @@ html, body {
    color: white;
 }
 
-.btn-mic.active {
+.btn-delete {
+   border: 1px solid black;
+   background-color: white;
+   color: black;
+}
+
+.btn-delete:hover {
    border: 1px solid black;
    background-color: black;
    color: white;
