--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -74,6 +74,18 @@ html, body {
    color: white;
 }
 
+.btn-camera {
+   border: 1px solid black;
+   background-color: white;
+   color: black;
+}
+
+.btn-camera:hover {
+   border: 1px solid black;
+   background-color: black;
+   color: white;
+}
+
 .float-center{
    position: fixed;
    display: flex;
@@ -128,6 +140,22 @@ html, body {
    justify-content: center;
    align-items: center;
    bottom: 60vw;
+   right: 5vw;
+   width: 15vw;
+   height: 15vw;
+   max-width: 15vh;
+   max-height: 15vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.float-top3-right {
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 80vw;
    right: 5vw;
    width: 15vw;
    height: 15vw;
