--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -243,6 +243,15 @@ html, body {
   .float-right {
       bottom: 20vh;
   }
+  .float-top-right {
+      bottom: 40vh;
+  }
+  .float-top2-right {
+      bottom: 60vh;
+  }
+  .float-top3-right {
+      bottom: 80vh;
+  }
   .icone-v3 {
       top: 5vw;
   }
