--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -241,6 +241,11 @@ html, body {
      align-items: center;
 }
 
+#camera-canvas {
+     background-color: #ccc;
+     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
 @media only screen and (min-width: 800px) {
   .float-center {
       left: 70vw;
