--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -245,8 +245,9 @@ html, body {
      border: 4px solid black;
      border-radius: 10px;
      background-color: #e5e5f7;
-     opacity: 0.8;
-     background: linear-gradient(135deg, #abacb855 25%, transparent 25%) -8px 0/ 16px 16px, linear-gradient(225deg, #abacb8 25%, transparent 25%) -8px 0/ 16px 16px, linear-gradient(315deg, #abacb855 25%, transparent 25%) 0px 0/ 16px 16px, linear-gradient(45deg, #abacb8 25%, #e5e5f7 25%) 0px 0/ 16px 16px;
+     opacity: 1;
+     background-image: radial-gradient(circle at center center, #abacb8, #e5e5f7), repeating-radial-gradient(circle at center center, #abacb8, #abacb8, 8px, transparent 16px, transparent 8px);
+     background-blend-mode: multiply;
      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
