--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -86,6 +86,18 @@ html, body {
    color: white;
 }
 
+.btn-historia {
+   border: 2px solid black;
+   background-color: white;
+   color: black;
+}
+
+.btn-historia:hover {
+   border: 2px solid black;
+   background-color: black;
+   color: white;
+}
+
 .float-center{
    position: fixed;
    display: flex;
@@ -107,7 +119,7 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 20vw;
+   bottom: 5vw;
    right: 5vw;
    width: 15vw;
    height: 15vw;
@@ -123,7 +135,7 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 40vw;
+   bottom: 25vw;
    right: 5vw;
    width: 15vw;
    height: 15vw;
@@ -139,7 +151,7 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 60vw;
+   bottom: 45vw;
    right: 5vw;
    width: 15vw;
    height: 15vw;
@@ -155,7 +167,23 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 80vw;
+   bottom: 65vw;
+   right: 5vw;
+   width: 15vw;
+   height: 15vw;
+   max-width: 15vh;
+   max-height: 15vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.float-top4-right {
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 85vw;
    right: 5vw;
    width: 15vw;
    height: 15vw;
@@ -257,16 +285,19 @@ html, body {
       bottom: 10vh;
   }
   .float-right {
-      bottom: 20vh;
+      bottom: 5vh;
   }
   .float-top-right {
-      bottom: 40vh;
+      bottom: 25vh;
   }
   .float-top2-right {
-      bottom: 60vh;
+      bottom: 45vh;
   }
   .float-top3-right {
-      bottom: 80vh;
+      bottom: 65vh;
+  }
+  .float-top4-right {
+      bottom: 85vh;
   }
   .icone-v3 {
       top: 5vw;
