--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -98,6 +98,82 @@ html, body {
    color: white;
 }
 
+.btn-left {
+   border: 2px solid black;
+   background-color: white;
+   color: black;
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 10vw;
+   left: 10vw;
+   width: 10vw;
+   height: 10vw;
+   max-width: 10vh;
+   max-height: 10vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.btn-top {
+   border: 2px solid black;
+   background-color: white;
+   color: black;
+  position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 20vw;
+   left: 20vw;
+   width: 10vw;
+   height: 10vw;
+   max-width: 10vh;
+   max-height: 10vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.btn-right {
+   border: 2px solid black;
+   background-color: white;
+   color: black;
+  position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 10vw;
+   left: 20vw;
+   width: 10vw;
+   height: 10vw;
+   max-width: 10vh;
+   max-height: 10vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.btn-down {
+   border: 2px solid black;
+   background-color: white;
+   color: black;
+   position: fixed;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   bottom: 10vw;
+   left: 15vw;
+   width: 10vw;
+   height: 10vw;
+   max-width: 10vh;
+   max-height: 10vh;
+   border-radius: 50%;
+   z-index: 9999;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
 .float-center{
    position: fixed;
    display: flex;
