--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -106,7 +106,7 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 10vw;
+   bottom: 25vw;
    left: 10vw;
    width: 10vw;
    height: 10vw;
@@ -117,15 +117,15 @@ html, body {
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
-.btn-top {
+.btn-up {
    border: 2px solid black;
    background-color: white;
    color: black;
-  position: fixed;
+   position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 20vw;
+   bottom: 35vw;
    left: 20vw;
    width: 10vw;
    height: 10vw;
@@ -144,8 +144,8 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   bottom: 10vw;
-   left: 20vw;
+   bottom: 20vw;
+   left: 35vw;
    width: 10vw;
    height: 10vw;
    max-width: 10vh;
@@ -164,7 +164,7 @@ html, body {
    justify-content: center;
    align-items: center;
    bottom: 10vw;
-   left: 15vw;
+   left: 25vw;
    width: 10vw;
    height: 10vw;
    max-width: 10vh;
