--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -26,6 +26,20 @@ html, body {
     opacity: 1;
 }
 
+.loading{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    color: white;
+    opacity: 1;
+    z-index: 15000;
+}
+
 .btn-left:hover,
 .btn-up:hover,
 .btn-right:hover,
@@ -240,9 +254,9 @@ html, body {
 
 .icone-v3{
    position: fixed;
-   bottom: 25vw;
+   top: 5vw;
    font-size: 20px;
-   left: 5vw;
+   right: 5vw;
    width: 10vw;
    height: 10vw;
    text-align: center;
@@ -279,7 +293,7 @@ html, body {
    display: flex;
    justify-content: center;
    align-items: center;
-   top: 35vw;
+   top: 40vw;
    left: 10vw;
    width: 80vw;
    height: 20vw;
