--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -26,7 +26,7 @@ html, body {
     opacity: 1;
 }
 
-.loading{
+#loading{
     position: absolute;
     display: flex;
     justify-content: center;
