--- a/extra/css/style.css
+++ b/extra/css/style.css
@@ -423,7 +423,7 @@ html, body {
       display: none;
   }
   .btn-camera {
-      display: block;
+      display: block !important;
   }
   .float-center {
       left: 70vw;
