--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -11,6 +11,8 @@ html, body {
     align-items: center;
     flex-direction: column;
     text-align: center;
+    backgound-color: #283747;
+    color: white;
 }
 
 #restart {
