--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -11,7 +11,7 @@ html, body {
     align-items: center;
     flex-direction: column;
     text-align: center;
-    backgound-color: #283747;
+    background-color: #283747;
     color: white;
 }
 
