--- a/pause/css/style.css
+++ b/pause/css/style.css
@@ -12,7 +12,7 @@ html, body {
     flex-direction: column;
     text-align: center;
     background-color: #9AC601;
-    color: black;
+    color: #81A80D;
 }
 
 #restart {
