--- a/digite/css/style.css
+++ b/digite/css/style.css
@@ -58,31 +58,20 @@ html, body {
     box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-#buttons {
+#type-area {
     width: 300px
-    height: 100px;
+    height: 50px;
     display: flex;
-    justify-content: space-between;;
+    justify-content: stretch;
     flex-direction: row;
     padding: 10px;
 }
 
-#btn-like {
+#btn-done {
    display: flex;
     justify-content: space-around;
     flex-direction: row;
     background-color: #36486b;
-    color: white;
-    border: 2px solid #000;
-    border-radius: 10px;
-    padding: 10px;
-}
-
-#btn-dislike {
-    display: flex;
-    justify-content: space-around;
-    flex-direction: row;
-    background-color: #c94c4c;
     color: white;
     border: 2px solid #000;
     border-radius: 10px;
