--- a/game/css/style.css
+++ b/game/css/style.css
@@ -30,6 +30,7 @@ html, body {
 } 
 
 .gear-place-container {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
