--- a/game/css/style.css
+++ b/game/css/style.css
@@ -20,6 +20,8 @@ html, body {
   height: 100px;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
 } 
 
 .gear {
